[gd_scene load_steps=9 format=3 uid="uid://d4m606yaxihaq"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_0daxd"]
[ext_resource type="PackedScene" uid="uid://bn5p6wefqllmy" path="res://prefabs/commands/attack_command.tscn" id="2_d65jr"]
[ext_resource type="ArrayMesh" uid="uid://dlhsjbeirjpup" path="res://models/plane.obj" id="3_bidpg"]
[ext_resource type="Script" path="res://scripts/cards/5die.gd" id="3_xgq40"]
[ext_resource type="Material" uid="uid://be2f1eln4dd12" path="res://materials/simple_green.tres" id="4_cj5uq"]
[ext_resource type="PackedScene" uid="uid://cnf4hgykiyqlh" path="res://prefabs/visual_effects/attack_highlight.tscn" id="5_infy2"]
[ext_resource type="PackedScene" uid="uid://dp0vrodr3vgiv" path="res://prefabs/text.tscn" id="6_ig2c7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_67anj"]
size = Vector3(1, 0.0610962, 1)

[node name="5die" type="StaticBody3D"]
script = ExtResource("1_0daxd")
_name = "5-Die"
_command_prefab = ExtResource("2_d65jr")

[node name="implementation" type="Node3D" parent="."]
script = ExtResource("3_xgq40")

[node name="small_view" type="Node3D" parent="."]

[node name="mesh" type="MeshInstance3D" parent="small_view"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, -0.423152)
mesh = ExtResource("3_bidpg")
surface_material_override/0 = ExtResource("4_cj5uq")

[node name="full_view" type="Node3D" parent="."]

[node name="attack_pattern" type="Node3D" parent="full_view"]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0.0432857, -0.475272)

[node name="highlight_attack" parent="full_view/attack_pattern" instance=ExtResource("5_infy2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)

[node name="highlight_attack2" parent="full_view/attack_pattern" instance=ExtResource("5_infy2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)

[node name="highlight_attack4" parent="full_view/attack_pattern" instance=ExtResource("5_infy2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)

[node name="highlight_attack5" parent="full_view/attack_pattern" instance=ExtResource("5_infy2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.76837e-07)

[node name="highlight_attack3" parent="full_view/attack_pattern" instance=ExtResource("5_infy2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)

[node name="mesh" type="MeshInstance3D" parent="full_view"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.53674e-07, -0.425539)
mesh = ExtResource("3_bidpg")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("4_cj5uq")

[node name="name_text" parent="full_view" instance=ExtResource("6_ig2c7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.742167)

[node name="damage_text" parent="full_view" instance=ExtResource("6_ig2c7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.115396)

[node name="collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00234985, -0.426)
shape = SubResource("BoxShape3D_67anj")
